Repeated messages started

--- a/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
+++ b/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
@@ -8,4 +8,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\shared\ChatBot2000.Core\ChatBot2000.Core.csproj" />
+  </ItemGroup>
+
 </Project>
