--- a/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
+++ b/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
@@ -9,7 +9,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\shared\ChatBot2000.Core\ChatBot2000.Core.csproj" />
+    <ProjectReference Include="..\..\shared\ChatBot2000.Infrastructure.Twitch\ChatBot2000.Infrastructure.Twitch.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
