--- a/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
+++ b/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
@@ -1,27 +1,28 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-    <AssemblyName>ChatBot2000.Cons</AssemblyName>
-    <RootNamespace>ChatBot2000.Cons</RootNamespace>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <AssemblyName>ChatBot2000.Cons</AssemblyName>
+        <RootNamespace>ChatBot2000.Cons</RootNamespace>
+        <LangVersion>latest</LangVersion>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\shared\ChatBot2000.Core\ChatBot2000.Core.csproj" />
-    <ProjectReference Include="..\..\shared\ChatBot2000.Infrastructure.Twitch\ChatBot2000.Infrastructure.Twitch.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\..\shared\ChatBot2000.Core\ChatBot2000.Core.csproj" />
+        <ProjectReference Include="..\..\shared\ChatBot2000.Infrastructure.Twitch\ChatBot2000.Infrastructure.Twitch.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
 
 </Project>
