--- a/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
+++ b/src/app/ChatBot2000.Cons/ChatBot2000.Cons.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\shared\ChatBot2000.Core\ChatBot2000.Core.csproj" />
+        <ProjectReference Include="..\..\shared\ChatBot2000.Infrastructure.Json\ChatBot2000.Infrastructure.Json.csproj" />
         <ProjectReference Include="..\..\shared\ChatBot2000.Infrastructure.Twitch\ChatBot2000.Infrastructure.Twitch.csproj" />
     </ItemGroup>
 
