--- a/src/shared/ChatBot2000.Infrastructure.Json/ChatBot2000.Infrastructure.Json.csproj
+++ b/src/shared/ChatBot2000.Infrastructure.Json/ChatBot2000.Infrastructure.Json.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <ProjectReference Include="..\ChatBot2000.Core\ChatBot2000.Core.csproj" />
   </ItemGroup>
 
 </Project>
