--- a/src/shared/ChatBot2000.Infrastructure.Ef/ChatBot2000.Infrastructure.Ef.csproj
+++ b/src/shared/ChatBot2000.Infrastructure.Ef/ChatBot2000.Infrastructure.Ef.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ChatBot2000.Core\ChatBot2000.Core.csproj" />
+  </ItemGroup>
+
 </Project>
